updated css file for contact page

--- a/css/webflow-style.css
+++ b/css/webflow-style.css
@@ -10719,3 +10719,13 @@ textarea.w-input, textarea.w-select {
     display: block !important;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .div-block-89 {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 200px;
+    z-index: 2;
+}
+}
