--- a/css/webflow-style.css
+++ b/css/webflow-style.css
@@ -3480,7 +3480,7 @@ textarea.w-input, textarea.w-select {
   margin-right: 0;
   padding-top: 55px;
   padding-bottom: 20px;
-  display: block;
+  display: none;
 }
 
 .image-11 {
@@ -3671,7 +3671,7 @@ textarea.w-input, textarea.w-select {
   height: 700px;
   margin-top: 0;
   padding-top: 248px;
-  display: flex;
+  display: n;
   position: relative;
   width: 100%;
 }
@@ -5515,6 +5515,7 @@ textarea.w-input, textarea.w-select {
   margin-bottom: 0;
   display: flex;
   position: static;
+  overflow-x: hidden;
 }
 
 .heading-32 {
@@ -5972,6 +5973,7 @@ textarea.w-input, textarea.w-select {
 .uui-max-width-large {
   width: 100%;
   max-width: 48rem;
+  padding-left: 10px;
 }
 
 .background-color-white {
@@ -6026,9 +6028,6 @@ textarea.w-input, textarea.w-select {
   line-height: 1.2;
 }
 
-.uui-heading-xlarge.mortgagecalcheading {
-  padding-left: 40px;
-}
 
 .uui-button-row {
   grid-column-gap: .75rem;
@@ -6070,7 +6069,7 @@ textarea.w-input, textarea.w-select {
 }
 
 .uui-text-size-xlarge.mortgagecalcdescrip {
-  padding-left: 40px;
+  padding-left: 10px;
 }
 
 .uui-heroheader24_image {
@@ -6090,6 +6089,8 @@ textarea.w-input, textarea.w-select {
   margin-top: 4rem;
   display: flex;
   position: relative;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .uui-heroheader24_image-background {
@@ -6161,15 +6162,34 @@ textarea.w-input, textarea.w-select {
   margin-right: auto;
   padding-left: 0;
   padding-right: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
+  align-items: center;
+  text-align: center;
+  align-content: center;
+  padding-left: 100px;
+  padding-right: 100px;
+  overflow: hidden;
+}
+
+.div-block-12 {
+  display: flex;
+}
+
+.div-block-64 {
+  padding-left: 200px;
+  padding-top: 50px;
+  padding-right: 200px;
 }
 
 .mortgageformmainblock {
-  grid-column-gap: 42px;
-  grid-row-gap: 42px;
+  column-gap: 50px;
   flex-flow: row;
   justify-content: center;
   align-items: center;
   display: flex;
+  width: 100%;
+  max-width: 100vw;
 }
 
 .mortgageformblock {
@@ -9275,6 +9295,7 @@ textarea.w-input, textarea.w-select {
   .flgrid1 {
     flex-flow: column;
     align-items: center;
+    max-width: 100vw;
   }
 
   .flgrid2 {
@@ -9295,11 +9316,14 @@ textarea.w-input, textarea.w-select {
   .uui-heading-xlarge {
     text-align: left;
     font-size: 2rem;
+    line-height: 35px;
+    padding-right: 10px;
   }
 
   .uui-heading-xlarge.mortgagecalcheading {
-    padding-right: 40px;
+    padding-right: 10px;
     font-size: 2rem;
+    
   }
 
   .uui-text-size-xlarge {
@@ -9314,7 +9338,7 @@ textarea.w-input, textarea.w-select {
   }
 
   .uui-section_heroheader24 {
-    overflow: hidden;
+    overflow-x: hidden;
   }
 
   .uui-heroheader24_image-background {
@@ -9601,6 +9625,11 @@ textarea.w-input, textarea.w-select {
 }
 
 @media screen and (max-width: 767px) {
+
+  .div-block-64 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
   .hero {
     flex-flow: column;
     display: flex;
@@ -9714,6 +9743,8 @@ textarea.w-input, textarea.w-select {
 
   .flheading {
     font-size: 25px;
+    text-align: center;
+    line-height: 30px;
   }
 
   .viewmore {
@@ -9756,9 +9787,6 @@ textarea.w-input, textarea.w-select {
     font-size: 2.25rem;
   }
 
-  .uui-heading-xlarge.mortgagecalcheading {
-    padding-left: 20px;
-  }
 
   .uui-button-row {
     align-self: stretch;
@@ -9781,9 +9809,6 @@ textarea.w-input, textarea.w-select {
     font-size: 1.125rem;
   }
 
-  .uui-text-size-xlarge.mortgagecalcdescrip {
-    padding-left: 20px;
-  }
 
   .uui-heroheader24_image {
     width: 44rem;
@@ -9830,6 +9855,8 @@ textarea.w-input, textarea.w-select {
   .uui-page-padding-2 {
     padding-left: 1rem;
     padding-right: 1rem;
+    max-width: 100vw;
+    overflow-x: hidden;
   }
 
   .uui-heading-medium {
@@ -10165,7 +10192,9 @@ textarea.w-input, textarea.w-select {
   }
 
   .homerbanner2 {
-    width: 100%;
+    width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
     height: auto;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -10205,10 +10234,27 @@ textarea.w-input, textarea.w-select {
     background-image: url("../images/skylinebg.png"), linear-gradient(to bottom, null, null);
     background-size: auto, auto;
     width: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
+    display: flex;
+  }
+
+  #newsletter-form {
+    width: 90vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #newsletter-form .w-input {
+    width: 80vw;
   }
 
   .heading-13 {
-    font-size: 45px;
+    width: 90vw;
+    font-size: 35px;
+    text-align: center;
+    width: 80%;
   }
 
   .text-block-7 {
@@ -10355,8 +10401,10 @@ textarea.w-input, textarea.w-select {
   }
 
   .button-3.hb2button.preconbutton {
-    width: 80%;
+    width: 90%;
     height: 80px;
+    font-size: 15px;
+    line-height: 20px;
   }
 
   .button-3.hb2button.persanalysbutton {
@@ -10386,6 +10434,8 @@ textarea.w-input, textarea.w-select {
 
   .mortgageformmainblock {
     flex-flow: column;
+    width: 100%;
+
   }
 
   .mortgageformblock {
