--- a/css/webflow-style.css
+++ b/css/webflow-style.css
@@ -6662,6 +6662,7 @@ textarea.w-input, textarea.w-select {
   width: 100%;
   height: 100%;
   position: absolute;
+  object-fit: cover;
 }
 
 .listingbottomblock {
