--- a/css/webflow-style.css
+++ b/css/webflow-style.css
@@ -5471,7 +5471,7 @@ textarea.w-input, textarea.w-select {
 }
 
 .div-block-51 {
-  background-image: url("../images/neighbourhood.jpg");
+  background-image: url("../images/fhe.jpg");
   background-position: 50%;
   background-repeat: repeat-y;
   background-size: cover;
